starting the project

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 #DataBase
-DB_HOST
-DB_PORT
-DB_USERNAME
-DB_DATABASE
-DB_PASSWORD
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_DATABASE=
+DB_PASSWORD=
+PORT=
