--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,7 @@ JWT_SECRET=
 VITE_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-
-
+# Cloudinary Configuration
+CLOUD_NAME=
+CLOUD_API_KEY=
+CLOUD_API_SECRET=
